fix: align items for team content images

--- a/src/assets/scss/_team.scss
+++ b/src/assets/scss/_team.scss
@@ -41,7 +41,7 @@
     &-images {
       display:         flex;
       justify-content: space-between;
-      align-items:     center;
+      align-items:     stretch;
       flex-wrap:       wrap;
       .team-content-image {
         border-radius: 20px;
